Fixed UI alignment

--- a/public/css/styleFilters.css
+++ b/public/css/styleFilters.css
@@ -480,5 +480,6 @@ a:not([href]):not([tabindex]){
   height: 180px;
   border-radius: 50%;
   padding: 0;
-
+  text-align: center;
+  vertical-align: middle;
 }
